@@ -13,9 +13,7 @@ import org.apache.hadoop.hive.ql.security.authorization.plugin.HiveAuthzPluginEx
 import org.apache.hadoop.hive.ql.security.authorization.plugin.HiveAuthzSessionContext;
 import org.apache.ranger.authorization.hive.authorizer.RangerHiveAuthorizerFactory;
 
-/**
- * Factory to replace RangerHiveAuthorizerFactory with phased governance proxy.
- */
+
 public class PhasedRangerAuthorizerFactory extends RangerHiveAuthorizerFactory {
 
     @Override
@@ -25,14 +23,16 @@ public class PhasedRangerAuthorizerFactory extends RangerHiveAuthorizerFactory {
             HiveAuthenticationProvider hiveAuthenticator,
             HiveAuthzSessionContext sessionContext
     ) throws HiveAuthzPluginException {
+        GovernanceClient client = buildGovernanceClient(conf);
+        boolean strict = conf.getBoolean("ranger.governance.strict-check-failure", true);
         try {
             return new PhasedRangerAuthorizer(
                     metastoreClientFactory,
                     conf,
                     hiveAuthenticator,
                     sessionContext,
-                    buildGovernanceClient(conf),
-                    conf.getBoolean("ranger.governance.strict-check-failure", true)
+                    client,
+                    strict
             );
         } catch (Exception e) {
             throw new HiveAuthzPluginException("Failed to create PhasedRangerAuthorizer", e);
@@ -40,26 +40,24 @@ public class PhasedRangerAuthorizerFactory extends RangerHiveAuthorizerFactory {
     }
 
     private GovernanceClient buildGovernanceClient(HiveConf conf) {
-        String url = conf.get("ranger.governance.endpoint", "http://governance-service/v1/decision");
+        final String url = conf.get("ranger.governance.endpoint", "http://governance-service/v1/decision");
         return new GovernanceClient() {
             @Override
             public DecisionResponse decide(DecisionRequest request) {
-                // TODO: replace with real HTTP/RPC client. This default keeps plugin behavior deterministic.
-                if (request.jobName() == null || request.jobName().isBlank() || "unknown".equals(request.jobName())) {
+                if (request.getJobName() == null || request.getJobName().trim().isEmpty() || "unknown".equals(request.getJobName())) {
                     return new DecisionResponse(200, "local-trace", new DecisionData(ActionType.BLOCK,
-                            "任务被拦截，原因：未设置 JobName，请参考 Wiki 整改。", true, request.queryId()));
+                            "任务被拦截，原因：未设置 JobName，请参考 Wiki 整改。", true, request.getQueryId()));
                 }
-                if (request.jobName().startsWith("auth_on_.") || request.jobName().startsWith("auth_on_")) {
+                if (request.getJobName().startsWith("auth_on_.") || request.getJobName().startsWith("auth_on_")) {
                     return new DecisionResponse(200, "local-trace", new DecisionData(ActionType.CHECK,
-                            "进入 Ranger 鉴权", false, request.queryId()));
+                            "进入 Ranger 鉴权", false, request.getQueryId()));
                 }
                 return new DecisionResponse(200, "local-trace", new DecisionData(ActionType.BYPASS,
-                        "存量任务豁免", false, request.queryId()));
+                        "存量任务豁免", false, request.getQueryId()));
             }
 
             @Override
             public void msgFail(DecisionRequest request, String rangerErrorMessage) {
-                // TODO: callback to governance platform /v1/msgFail
                 String ignored = url + rangerErrorMessage;
             }
         };
