@@ -2,6 +2,7 @@ package com.ranger.governance.server;
 
 import com.ranger.governance.common.model.ActionType;
 import com.ranger.governance.common.model.DecisionRequest;
+import com.ranger.governance.common.model.DecisionResponse;
 import com.ranger.governance.common.model.EngineType;
 import com.ranger.governance.server.cache.GovernancePolicyCache;
 import com.ranger.governance.server.service.GovernanceDecisionService;
@@ -10,7 +11,8 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.util.Set;
+import java.util.Arrays;
+import java.util.HashSet;
 
 class GovernanceDecisionServiceTest {
     private GovernanceDecisionService service;
@@ -18,25 +20,30 @@ class GovernanceDecisionServiceTest {
     @BeforeEach
     void init() {
         GovernancePolicyCache cache = new GovernancePolicyCache();
-        cache.refresh("^[a-z][a-z0-9_\\-]{2,63}$", Set.of("etl_finance_daily_01"), Set.of("", "anonymous"), Set.of("etl_warn_job"));
+        cache.refresh(
+                "^[a-z][a-z0-9_\\-]{2,63}$",
+                new HashSet<String>(Arrays.asList("etl_finance_daily_01")),
+                new HashSet<String>(Arrays.asList("", "anonymous")),
+                new HashSet<String>(Arrays.asList("etl_warn_job"))
+        );
         service = new GovernanceDecisionService(cache, new NoopFeiYouNotifier());
     }
 
     @Test
     void shouldBlockWhenJobNameMissing() {
-        var response = service.decide(new DecisionRequest("", "zhangsan", EngineType.HIVE_TEZ, "select 1", "127.0.0.1", "q1"));
-        Assertions.assertEquals(ActionType.BLOCK, response.data().actionType());
+        DecisionResponse response = service.decide(new DecisionRequest("", "zhangsan", EngineType.HIVE_TEZ, "select 1", "127.0.0.1", "q1"));
+        Assertions.assertEquals(ActionType.BLOCK, response.getData().getActionType());
     }
 
     @Test
     void shouldCheckWhenMigrated() {
-        var response = service.decide(new DecisionRequest("etl_finance_daily_01", "zhangsan", EngineType.HIVE_TEZ, "select 1", "127.0.0.1", "q1"));
-        Assertions.assertEquals(ActionType.CHECK, response.data().actionType());
+        DecisionResponse response = service.decide(new DecisionRequest("etl_finance_daily_01", "zhangsan", EngineType.HIVE_TEZ, "select 1", "127.0.0.1", "q1"));
+        Assertions.assertEquals(ActionType.CHECK, response.getData().getActionType());
     }
 
     @Test
     void shouldBypassForLegacy() {
-        var response = service.decide(new DecisionRequest("etl_legacy_abc", "zhangsan", EngineType.HIVE_TEZ, "select 1", "127.0.0.1", "q1"));
-        Assertions.assertEquals(ActionType.BYPASS, response.data().actionType());
+        DecisionResponse response = service.decide(new DecisionRequest("etl_legacy_abc", "zhangsan", EngineType.HIVE_TEZ, "select 1", "127.0.0.1", "q1"));
+        Assertions.assertEquals(ActionType.BYPASS, response.getData().getActionType());
     }
 }
